[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/Button_Poppins.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/Poppins.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/Menus/Settings/Settings.gd" type="Script" id=3]

[node name="Settings" type="Node2D"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Title_panel" type="PanelContainer" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -432.0
margin_right = 432.0
margin_bottom = 245.0

[node name="Title" type="Label" parent="Control/CanvasLayer/Title_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 857.0
margin_bottom = 238.0
rect_min_size = Vector2( 850, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Settings:"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -775.0
margin_top = -55.5
margin_right = 775.0
margin_bottom = 55.5
custom_constants/separation = 500

[node name="Music" type="VBoxContainer" parent="Control/CanvasLayer/HBoxContainer"]
margin_right = 600.0
margin_bottom = 111.0
rect_min_size = Vector2( 600, 0 )

[node name="MusicText" type="Label" parent="Control/CanvasLayer/HBoxContainer/Music"]
margin_right = 600.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 1 )
text = "Music Volume: 0"
align = 1

[node name="MusicSlider" type="HSlider" parent="Control/CanvasLayer/HBoxContainer/Music"]
margin_top = 95.0
margin_right = 600.0
margin_bottom = 111.0
min_value = -60.0
max_value = 6.0
step = 0.5

[node name="SFX" type="VBoxContainer" parent="Control/CanvasLayer/HBoxContainer"]
margin_left = 1100.0
margin_right = 1700.0
margin_bottom = 111.0
rect_min_size = Vector2( 600, 0 )

[node name="SfxText" type="Label" parent="Control/CanvasLayer/HBoxContainer/SFX"]
margin_right = 600.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 1 )
text = "SFX Volume: 0"
align = 1

[node name="SfxSlider" type="HSlider" parent="Control/CanvasLayer/HBoxContainer/SFX"]
margin_top = 95.0
margin_right = 600.0
margin_bottom = 111.0
min_value = -60.0
max_value = 6.0
step = 0.5

[node name="Option_panel2" type="PanelContainer" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -362.0
margin_top = -210.0
margin_right = 362.0
margin_bottom = -99.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CanvasLayer/Option_panel2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 717.0
margin_bottom = 104.0
custom_constants/separation = 20

[node name="Back_btn" type="Button" parent="Control/CanvasLayer/Option_panel2/VBoxContainer"]
margin_right = 710.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 1 )
text = "Main Menu"

[connection signal="drag_ended" from="Control/CanvasLayer/HBoxContainer/Music/MusicSlider" to="." method="_on_MusicSlider_drag_ended"]
[connection signal="drag_ended" from="Control/CanvasLayer/HBoxContainer/SFX/SfxSlider" to="." method="_on_SfxSlider_drag_ended"]
[connection signal="pressed" from="Control/CanvasLayer/Option_panel2/VBoxContainer/Back_btn" to="." method="_on_Back_btn_pressed"]
